<?xml version="1.0" encoding="utf-8"?>
<android.support.wear.widget.BoxInsetLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:deviceIds="wear"
        android:padding="@dimen/box_inset_layout_padding">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/inner_frame_layout_padding"
            app:boxedEdges="all" android:background="@color/white">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_world" android:textColor="@android:color/holo_green_dark"
                    android:gravity="center"/>
            <TextView
                    android:text="@string/heart_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView" android:textColor="@color/black"
                    android:gravity="center_horizontal" android:paddingTop="10dp"/>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/heartBeatSlider"
            />
            <TextView
                    android:text="@string/blood_pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:textColor="@color/black"
                    android:gravity="center" android:paddingTop="5dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/diastolic"
                        android:layout_width="2dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:textColor="@color/black" android:id="@+id/textView3" android:textSize="10sp"/>
                <SeekBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/diastolicSlider"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">
                <TextView
                        android:text="@string/systolic"
                        android:layout_width="2dp"
                        android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"
                        android:textColor="@color/black" android:textSize="10sp"/>
                <SeekBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/systolicSlider" android:layout_weight="1"
                        style="@android:style/Widget.Material.SeekBar"/>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</android.support.wear.widget.BoxInsetLayout>